<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#30F9F9F9"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="emailAddress"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/email"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/chat_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#5f6063"
            android:textSize="16sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/chat_text"
            android:textColorHint="#5f6063"
            android:textSize="16sp"
            android:typeface="normal" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/buttonLogin"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="24dp"
            android:background="@color/button_blue"
            android:text="@string/login"
            android:foreground="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>