<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:onClick="onLoginClicked"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/login_button"
        android:textAlignment="textStart"
        android:textColor="#1b1e1f"
        android:textSize="@dimen/button_text_size"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_chat"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif-medium"
        android:onClick="onChatClicked"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:shadowRadius="8"
        android:text="@string/chat_button"
        android:textAlignment="textStart"
        android:textColor="#1b1e1f"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="213dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_animation"
        android:drawablePadding="16dp"
        android:onClick="onAnimationClicked"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:text="@string/animation_button"
        android:textAlignment="textStart"
        android:textColor="#1b1e1f"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
